# MFA-Rust-Example

./: .gitignore  Cargo.toml
migrations/2022-08-25-021505_users/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  utils.rs
src/models/: code.rs  mod.rs  schema.rs  user.rs
