[package]
name = "mfa_lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "*", default-features = false, features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
sha2 = "0.10.2"
base64 = "*"
lettre = "0.10"
rand = "0.8.5"